src/Components/shop/card/ProductCard.module.css
.cardContainer {
  width: 260px;
}

.link {
  text-decoration: none;
  color: black;
}

.img {
  width: 100%;
  height: 100%;
  object-fit: contain;
}

.title {
  margin-bottom: 20px;
  font-family: Poppins;
  font-weight: 600;
  font-style: Medium;
  font-size: 20px;
  line-height: 30px;
  text-align: left;
  text-decoration: none;
}

.title:hover {
  color: var(--primary-color);
}

.button {
  width: 60%;
  margin-top: 10px;
  padding: 10px 10px;
  background-color: #DCD7E2;
  color: #000;
  font-weight: 500;
  border: none;
  border-radius: 5px;
  cursor: pointer;
  text-align: center;
}

